Adjust data layer, add references to lab5